--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8" />
   <title>CSS Framework</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/fade-in.css" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+<!--   <link rel="icon" href="favicon.png"> -->
+
   <link rel="stylesheet" type="text/css" href="css/menu.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/fade-in.css" />
   <link rel="stylesheet" type="text/css" href="css/responsive.css" />
   <link rel="stylesheet" type="text/css" href="css/custom.css" />
-<!--   <link rel="icon" href="favicon.png"> -->
+
+  <script src="js/fade-in.js" defer></script>
+  <script src="js/toggle-menu.js" defer></script>
+  <script src="js/functions.js" defer></script>
 </head>
 <body>
   <div id="fadein"></div>
@@ -52,7 +58,7 @@
       <div class="row gap-3">
         <div class="column col-2 vertical-align">
           <h2>Condi&shy;mentum lacinia quis vel</h2>
-          <p>Dui faucibus in ornare quam viverra orci sagittis eu. Consectetur a erat nam at. Sed adipiscing diam donec adipiscing tristique risus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Elementum sagittis vitae et leo duis. Ac felis donec et odio pellentesque diam volutpat. Aliquam vestibulum morbi blandit cursus. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales.</p>
+          <p color="red">Dui faucibus in ornare quam viverra orci sagittis eu. Consectetur a erat nam at. Sed adipiscing diam donec adipiscing tristique risus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Elementum sagittis vitae et leo duis. Ac felis donec et odio pellentesque diam volutpat. Aliquam vestibulum morbi blandit cursus. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales.</p>
           <p>Ac auctor augue mauris augue neque gravida in. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. Nunc vel risus commodo viverra maecenas. Semper viverra nam libero justo laoreet sit amet cursus sit.</p>
         </div>
         <div class="column col-2 vertical-align">
@@ -64,15 +70,12 @@
     </section>
 
 <!-- 3-COLMUN SECTION -->
-    <section></section>
+    <section padding="45px"></section>
 
   </main>
 
   <footer>
     <small>© 2023 Your company name. All Rights Reserved.</small>
   </footer>
-  <script src="js/fade-in.js"></script>
-  <script src="js/toggle-menu.js"></script>
-  <script src="js/functions.js"></script>
 </body>
 </html>
