--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <!--   <link rel="icon" href="favicon.png"> -->
 
   <link rel="stylesheet" type="text/css" href="css/menu.css" />
@@ -40,7 +41,7 @@
 
   <main>
 <!-- HERO SECTION -->
-    <section id="hero" class="fullpage">
+    <section id="hero" class="fullpage" background-image="url('https://wallscloud.net/img/resize/1600/1200/MM/2017-09-03-sleepy_mountains.png')">
       <div class="row">
         <div class="column">
           <h1>Cas&shy;cading Style <span class="inline-block">Sheets Frame&shy;work</span></h1>
@@ -54,23 +55,92 @@
     </section>
 
 <!-- 2-COLMUN SECTION -->
-    <section>
+    <section background-color="var(--color-white)">
       <div class="row gap-3">
         <div class="column col-2 vertical-align">
-          <h2>Condi&shy;mentum lacinia quis vel</h2>
-          <p color="red">Dui faucibus in ornare quam viverra orci sagittis eu. Consectetur a erat nam at. Sed adipiscing diam donec adipiscing tristique risus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Elementum sagittis vitae et leo duis. Ac felis donec et odio pellentesque diam volutpat. Aliquam vestibulum morbi blandit cursus. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales.</p>
+          <h2>Two-Column&shy; Section</h2>
+          <p>Dui faucibus in ornare quam viverra orci sagittis eu. Consectetur a erat nam at. Sed adipiscing diam donec adipiscing tristique risus. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Elementum sagittis vitae et leo duis. Ac felis donec et odio pellentesque diam volutpat. Aliquam vestibulum morbi <a href="#">blandit</a> cursus. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales.</p>
           <p>Ac auctor augue mauris augue neque gravida in. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. Nunc vel risus commodo viverra maecenas. Semper viverra nam libero justo laoreet sit amet cursus sit.</p>
         </div>
         <div class="column col-2 vertical-align">
           <div class="img-container img-cover">
-            <img src="https://www.elegantthemes.com/images/divi-ai/ai-image-ex-03.jpg">
+            <img src="https://wallscloud.net/img/resize/1024/768/MM/2016-12-27-%D0%B2%D0%BE%D0%BB%D0%BD%D0%B0.jpg">
           </div>
         </div>
       </div>
     </section>
 
 <!-- 3-COLMUN SECTION -->
-    <section padding="45px"></section>
+    <section background-color="var(--color-primary)">
+      <div class="row" margin-bottom="1em">
+        <div class="column"><h2 text-align="center" color="var(--color-white)">Three-Column&shy; Section</h2></div>
+      </div>
+      <div class="row gap-3">
+        <div class="column col-3">
+          <div class="blurb center">
+              <i class="material-icons square" color="var(--color-primary)">sunny</i>
+              <h3 class="title" color="var(--color-white)">Velit Tortor Pretium</h3>
+              <p class="description" color="var(--color-white)">
+                Maecenas sed enim ut sem viverra aliquet. Nullam non nisi est sit amet facilisis. Erat pellentesque adipiscing commodo elit. Amet massa vitae tortor condimentum lacinia quis vel eros.
+              </p>
+              <div class="btn-container">
+                <a href="#" class="btn btn-fade">Learn More</a>
+              </div>
+          </div>
+        </div>
+        <div class="column col-3">
+          <div class="blurb center">
+              <i class="material-icons square" color="var(--color-primary)">dark_mode</i>
+              <h3 class="title" color="var(--color-white)">Curabitur Gravida Arcu</h3>
+              <p class="description" color="var(--color-white)">
+                Ac odio tempor orci dapibus ultrices in. Viverra nibh cras pulvinar mattis nunc sed blandit. Morbi tempus iaculis urna id volutpat lacus laoreet. Phasellus vestibulum lorem sed risus ultricies tristique nulla.
+              </p>
+              <div class="btn-container">
+                <a href="#" class="btn btn-fade">Learn More</a>
+              </div>
+          </div>
+        </div>
+        <div class="column col-3">
+          <div class="blurb center">
+              <i class="material-icons square" color="var(--color-primary)">star</i>
+              <h3 class="title" color="var(--color-white)">Auctor Elit Sed Vulputate</h3>
+              <p class="description" color="var(--color-white)">
+               Nibh mauris cursus mattis molestie a iaculis at erat pellentesque. Aliquet lectus proin nibh nisl. Duis ultricies lacus sed turpis tincidunt id. Tincidunt lobortis feugiat vivamus at augue eget. 
+              </p>
+              <div class="btn-container">
+                <a href="#" class="btn btn-fade">Learn More</a>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+<!-- 4-COLMUN SECTION -->
+    <section background-color="var(--color-white)">
+      <div class="row" margin-bottom="1em">
+        <div class="column">
+          <h2 text-align="center">Four-Column&shy; Section</h2>
+        </div>
+      </div>
+
+      <div class="row gap-4">
+        <div class="column">
+          Facilisi etiam dignissim diam quis enim.
+        </div>
+
+        <div class="column">
+          Facilisi etiam dignissim diam quis enim.
+        </div>
+
+        <div class="column">
+          Facilisi etiam dignissim diam quis enim.
+        </div>
+
+        <div class="column">
+          Facilisi etiam dignissim diam quis enim.
+        </div>
+      </div>
+    </section>
 
   </main>
 
