--- a/index.html
+++ b/index.html
@@ -123,29 +123,53 @@
         </div>
       </div>
 
-      <div class="row gap-4">
-        <div class="column">
-          Facilisi etiam dignissim diam quis enim.
+      <div class="row gap-3">
+        <div class="column col-4">
+          <div class="blurb center">
+              <h3 class="title">Amet Aliquam</h3>
+              <p class="description">
+               Morbi quis commodo odio aenean. Morbi tincidunt augue interdum velit. 
+              </p>
+          </div>
         </div>
 
-        <div class="column">
-          Facilisi etiam dignissim diam quis enim.
+        <div class="column col-4">
+          <div class="blurb center">
+              <h3 class="title">Vulputate Dignissim</h3>
+              <p class="description">
+               Massa tincidunt dui ut ornare lectus sit. Vitae aliquet nec ullamcorper sit amet risus. 
+              </p>
+          </div>
         </div>
 
-        <div class="column">
-          Facilisi etiam dignissim diam quis enim.
+        <div class="column col-4">
+          <div class="blurb center">
+              <h3 class="title">Consequat Interdum</h3>
+              <p class="description">
+               Malesuada fames ac turpis egestas sed tempus urna. Mattis molestie a iaculis at erat. 
+              </p>
+          </div>
         </div>
 
-        <div class="column">
-          Facilisi etiam dignissim diam quis enim.
+        <div class="column col-4">
+          <div class="blurb center">
+              <h3 class="title">Consectetur Adipiscing</h3>
+              <p class="description">
+               Turpis egestas maecenas pharetra convallis posuere. Orci ac auctor augue mauris augue neque. 
+              </p>
+          </div>
         </div>
       </div>
     </section>
 
   </main>
 
-  <footer>
-    <small>© 2023 Your company name. All Rights Reserved.</small>
+  <footer background-color="var(--color-primary)">
+    <div class="row" padding="1em">
+      <div class="column">
+        <p color="var(--color-white)" text-align="center" margin-bottom="0">© 2023 Your company name. All Rights Reserved.</p>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
