--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<!--   <link rel="icon" href="favicon.png"> -->
+  <link rel="icon" href="resources/favicon.png">
 
   <link rel="stylesheet" type="text/css" href="css/menu.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -18,6 +18,7 @@
   <script src="js/fade-in.js" defer></script>
   <script src="js/toggle-menu.js" defer></script>
   <script src="js/functions.js" defer></script>
+  <script src="js/scroll-to-top.js" defer></script>
 </head>
 <body>
   <div id="fadein"></div>
@@ -171,5 +172,12 @@
       </div>
     </div>
   </footer>
+
+  <div id='scrollToTop'>
+    <div class='scroll icon'>
+    <span>&#11165;</span>
+  </div>
+
+</div>
 </body>
 </html>
